--- a/src/style/gradient/gradient.css
+++ b/src/style/gradient/gradient.css
@@ -38,11 +38,11 @@
 }
 
 .gradient .GOLD .bottom, .gradient .GOLD {
-    background: linear-gradient(to bottom, #ff4e50, #f9d423);
+    background: linear-gradient(to bottom, #BF953F, #FCF6BA, #B38728, #FBF5B7, #AA771C);
 }
 
 .gradient .GOLD .right {
-    background: linear-gradient(to right, #ff4e50, #f9d423);
+    background: linear-gradient(to right, #BF953F, #FCF6BA, #B38728, #FBF5B7, #AA771C);
 }
 
 .gradient .textclip {
@@ -60,7 +60,6 @@
     flex-grow: 1;
     background-color: #1f1f1f;
     border-radius: 16px;
-    margin: 8px;
 }
 
 
@@ -69,11 +68,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-
-.gradient .hidden .text {
-    font-weight: 300;
-    font-size: 400px;
+    overflow: hidden;
 }
 
 
@@ -86,17 +81,8 @@
 }
 
 .gradient .backside .title {
-    font-size: 82px;
-    letter-spacing: 20px;
     writing-mode: vertical-rl;
     text-orientation: sideways;
-}
-
-.gradient .backside .text {
-    font-size: 20px;
-    letter-spacing: 11px;
-    width: min-content;
-    margin: auto 0 32px 0;
 }
 
 .gradient .action .content {
@@ -104,25 +90,9 @@
     flex-direction: column;
 }
 
-.gradient .action .title {
-    width: available;
-    padding: 8px 16px 8px 16px;
-    margin: 16px 0 0 0;
-    background-color: #0f0f0f;
-    font-size: 25px;
-    letter-spacing: 0px;
-    font-weight: bold;
-}
-
-.gradient .action .title .right {
+.gradient .action .right {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-}
-
-.gradient .action .image {
-    max-width: 100%;
-    height: 150px;
-    background-size: cover;
 }
 
 .gradient .action .content {
@@ -139,8 +109,6 @@
 }
 
 .gradient .action .text {
-    font-size: 18px;
-    margin: 16px 48px 16px 16px;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -150,12 +118,7 @@
     right: 0;
     bottom: 0;
     transform: rotate(180deg);
-
-    font-size: 20px;
-    letter-spacing: 10px;
     writing-mode: vertical-rl;
-    margin: 12px;
-
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
