--- a/src/style/gradient/gradient.css
+++ b/src/style/gradient/gradient.css
@@ -98,14 +98,15 @@
 .gradient .action .content {
     background-position: center;
     background-size: cover;
-    backdrop-filter: blur(14px) brightness(0.8);
+    backdrop-filter: blur(0px);
+    /*Somehow this needs to be here /\*/
 }
 
 .gradient .action .foreground {
     width: 100%;
     height: 100%;
     border-radius: 16px;
-    backdrop-filter: blur(30px) brightness(0.6) grayscale(0.8);
+    backdrop-filter: blur(0px);
 }
 
 .gradient .action .text {
