Updated FTA deck

--- a/src/components/icons/icons.css
+++ b/src/components/icons/icons.css
@@ -31,13 +31,13 @@
 }
 
 .handCardIcon {
-    color: #00d2ff;
-    -webkit-text-fill-color: #00d2ff;
+    color: #f4791f;
+    -webkit-text-fill-color: #f4791f;
 }
 
 .equipmentCardIcon {
-    color: #00d2ff;
-    -webkit-text-fill-color: #00d2ff;
+    color: #f4791f;
+    -webkit-text-fill-color: #f4791f;
 }
 
 .exposeIcon {
