--- a/src/style/gradient/gradient.sass
+++ b/src/style/gradient/gradient.sass
@@ -56,6 +56,18 @@
       // Text
       background: linear-gradient(to right, #fce59b, #e4b52b, #FBF5B7, #d69721)
 
+  .WHITE
+    // action card color - Outer
+    background: linear-gradient(to bottom, #c9d6ff, #e2e2e2)
+
+    .bottom
+      // Text
+      background: linear-gradient(to bottom, #c9d6ff, #e2e2e2)
+
+    .right
+      // Text
+      background: linear-gradient(to right, #c9d6ff, #e2e2e2)
+
   .card
     display: flex
     width: 100%
@@ -129,6 +141,25 @@
       writing-mode: vertical-rl
       -webkit-background-clip: text
       -webkit-text-fill-color: transparent
+
+  .role
+
+    .content
+      display: flex
+      align-items: center
+      justify-content: center
+
+    .text
+      -webkit-background-clip: text
+      -webkit-text-fill-color: transparent
+      word-break: break-word
+
+    .title
+      writing-mode: vertical-rl
+      -webkit-background-clip: text
+      -webkit-text-fill-color: transparent
+      width: min-content
+      height: min-content
 
 
 .gradient .color, .gradient.color, .gradient .colorbottom
