--- a/src/style/gradient/gradient.sass
+++ b/src/style/gradient/gradient.sass
@@ -155,9 +155,19 @@
       word-break: break-word
 
     .title
-      writing-mode: vertical-rl
       -webkit-background-clip: text
       -webkit-text-fill-color: transparent
+
+  .vertical
+    max-width: min-content
+    height: 100%
+    display: flex
+    flex-direction: column
+    flex-wrap: nowrap
+    justify-content: space-evenly
+
+    .text
+      writing-mode: vertical-rl
       width: min-content
       height: min-content
 
