--- a/src/style/gradient/gradient.sass
+++ b/src/style/gradient/gradient.sass
@@ -6,7 +6,7 @@
 
   .BLACK
     // action card color - Outer
-    background: linear-gradient(to bottom, #0f2027, #203a43, #2c5364)
+    background: linear-gradient(to bottom, #0f2027, #203a43, #213e4b)
     //text
     .bottom
       background: linear-gradient(to bottom, #bdc3c7, #427d96)
@@ -108,6 +108,7 @@
       text-orientation: sideways
 
   .action
+
     .content
       display: flex
       flex-direction: column
@@ -151,6 +152,7 @@
       writing-mode: vertical-rl
       -webkit-background-clip: text
       -webkit-text-fill-color: transparent
+      height: 100%
 
   .role
 
@@ -210,7 +212,6 @@
       width: 100%
       height: 100%
       object-fit: cover
-
 
 .gradient .color, .gradient.color, .gradient .colorbottom
   background: linear-gradient(to bottom, #A83279, #D38312)
