--- a/src/style/gradient/gradient.sass
+++ b/src/style/gradient/gradient.sass
@@ -107,6 +107,9 @@
       writing-mode: vertical-rl
       text-orientation: sideways
 
+    .vertical:first-child
+      margin-top: 16px
+
   .action
 
     .content
